# graphql-viewer

./: .gitignore  Makefile  README.md  metadata.json  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg
dev/: networkx_plotly.ipynb
examples/: frontend.py
graphv/: api.py  cli.py
