[tool.poetry]
name = "grapv"
version = "0.0.1"
description = "Graph Viewer"
license = "MIT"
authors = [
  "Py4mac <contact@py4mac.com>"
]
homepage = "https://github.com/py4mac/graphql-plotly-viewer"

[tool.poetry.dependencies]
python = ">=3.7,<3.9"

fastapi = ">=0.61.2"
graphene = ">=2.0"
#graphene-pydantic = ">=0.2.0"
plotly = "^4.12.0"
networkx = "^2.5.0"
pandas = "^1.1.3"
pydgraph = "^20.07.0"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
requests = "2.23.0"  # TestClient

# Testing
pytest = "5.4.1"
pytest-cov = "2.8.1"
pytest-asyncio = "0.12.0"
coverage = "5.1"
testfixtures = "6.14.1"

# Static
isort = "4.3.21"
autoflake = "1.3.1"
black = "19.10b0"
flake8 = "3.7.9"
mypy = "0.770"

# Documentation
mkdocs = "*"
mkdocs-material = "*"
markdown-include = "*"
pymdown-extensions = "*"
fontawesome-markdown = "*"
mock = "3.0.5"
autopep8 = "1.5.2"

[tool.black]
line-length = 120
target_version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | htmlcov
    | build
  )/
)
'''

[tool.isort]
line_length = 120
known_first_party = ["graphv", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool.poetry.scripts]
graphv = 'graphv.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
